# Privacy-Preserving-Ridge-Regression

./: .gitignore  LICENCE  README.md  TODO  file  instructions  notions
Datasets/: .gitignore  getDatasets.sh
Meetings/: 0-101018.md  1-181018.md  141118.md  141119.md  181019.md  201118.md  251019.md  3-141118.md  4-221118.md  5-291118.md  6-061218.md
Modules/: README.md
Modules/ABY/: Dockerfile
Modules/ABY/add_circuit/: CMakeLists.txt  add_circuit_test.cpp  add_test.cpp
Modules/ABY/add_circuit/common/: add.cpp  add.h  add_circuit.cpp  add_circuit.h
Modules/ABY/examples/add_circuit/: add_test.cpp
Modules/ABY/examples/add_circuit/common/: add.cpp  add.h
Modules/ABY/examples/float/: abyfloat.cpp
Modules/ABY/examples/matrix_sub/: CMakeLists.txt  matrix_sub_test.cpp
Modules/ABY/examples/matrix_sub/common/: matrix_sub.cpp  matrix_sub.h  utils.cpp  utils.h
Modules/ABY/examples/millionaire_prob/: CMakeLists.txt  cleanup.sh
Modules/ABY/examples/millionaire_prob/common/: millionaire_prob.cpp
Modules/ABY/examples/my_prog/: my_prog_test
Modules/ABY/examples/my_prog/common/: my_prog.cpp  my_prog.h
Modules/ABY/examples/sqrt_circuit/: sqrt_test.cpp
Modules/ABY/examples/sqrt_circuit/common/: sqrt.h
Modules/ABY/examples/sqrt_william/: CSP.cpp
Modules/ABY/examples/sqrt_william/common/: circuit.cpp
Modules/ABY/float/: CMakeLists.txt
Modules/ABY/float_operation/: CMakeLists.txt
Modules/ABY/float_operation/common/: sqrt.cpp
Modules/ABY/matrix_sub/common/: matrix_sub.h
Modules/ABY/matrix_subtraction/: CMakeLists.txt
Modules/ABY/millionaire_prob/: CMakeLists.txt  millionaire_prob_test  millionaire_prob_test.cpp
Modules/ABY/mult/: mult_test.cpp
Modules/ABY/mult/common/: sqrt.h
Modules/ABY/my_prog/: CMakeLists.txt  my_prog_test.cpp
Modules/ABY/my_prog/common/: my_prog.cpp
Modules/ABY/scalar_addition/: add_test.cpp
Modules/ABY/sqrt_circuit/: CMakeLists.txt
Modules/ABY/sqrt_circuit/common/: sqrt.cpp
Modules/ABY/sqrt_william/common/: circuit.h
Modules/ABY/sqrt_william/input/: CSP
Modules/cholesky/: cholesky.py
Modules/regression/: Regression.py  concrete.py  cpu.py  forestfire.py
Modules/regression/classes/: Regression.py  termcol.py
Modules/yao/: CMakeLists.txt  CSP.cpp  Evaluator  Evaluator.cpp  abyfloat.cpp
Modules/yao/common/: circuit.cpp  circuit.h  utils.cpp  utils.h
Modules/yao/input/: CSP  CSP_3  CSP_4
PrivacyRegression/: CSP.py  Evaluator.py  PPRR.py  Users.py  app.py  createDockers.sh  requirements.txt
PrivacyRegression/classes/: CSP.py  Evaluator.py  Users.py  progressbar.py  termcol.py  utils.py
PrivacyRegression/garbled_circuit/: CMakeLists.txt  CSP  CSP.cpp  Evaluator  Evaluator.cpp
PrivacyRegression/garbled_circuit/common/: circuit.cpp  circuit.h  utils.cpp  utils.h
PrivacyRegression/garbled_circuit/inputs/: Amask  bmask  muA  mub
PrivacyRegression/inputs/: Amask  bmask  muA  mub
elements/paillier/: paillier.py
elements/regression/: forestfire.py  regression.py  ridge.py
extra/paillier/: paillier.py
